# retrygold-app

./: pyproject.toml
retrygold_app/: app.py
retrygold_app/db/: chroma.sqlite3
