[tool.poetry]
name = "retrygold-app"
version = "0.1.0"
description = ""
authors = ["Sunaweb <sunawebb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.3"
chromadb = "^0.5.13"
streamlit = "^1.39.0"
langchain-community = "^0.3.2"
pypdf = "^5.0.1"
protobuf = "3.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
